# LLP_lab3

./: CMakeLists.txt  README.md  client.c  server.c
gremlin/: CMakeLists.txt
gremlin/include/: structure.h
gremlin/include/stools/: printer.h  string_tools.h
gremlin/include/view_tools/: alloc_view.h  parser_pieces.h
gremlin/work/stools/: printer.c  string_tools.c
gremlin/work/view_tools/: parser_pieces.c
protobuffer/: common.c  message.options
server/: CMakeLists.txt  graph.c  graph.h  reqest_handler.c  reqest_handler.h  string_tools.h
